# gnome-social-media

./: .buildconfig  Makefile.am  configure.ac
src/: Makefile.am  gnome-social-media.c  gnome-social-media.h
