
bin_PROGRAMS = gnome-social-media

gnome_social_media_SOURCES = \
	gnome-social-media.c
	gnome-social-media.h

gnome_social_media_CFLAGS = \
	$(WARN_CFLAGS)			\
	$(GNOME_SOCIAL_MEDIA_CFLAGS)

gnome_social_media_LDADD = $(GNOME_SOCIAL_MEDIA_LIBS)

gnome_social_media_LDFLAGS = $(WARN_LDFLAGS)


-include $(top_srcdir)/git.mk
